[package]
name = "rocket"
version = "0.1.0"
authors = ["xClueless <clueless_@live.co.uk>"]

[dependencies]
git2 = "*"
regex = "*"
xargo = "*"
toml = "*"

[lib]
name = "rocket"
path = "src/mod.rs"

[[bin]]
name = "cargo-rocket"
path = "src/bin/cargo_rocket.rs"

[[bin]]
name = "rocket"
path = "src/bin/rocket.rs"
